sock-shop/base/front-end-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    name: front-end
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    name: front-end
